fix base line alignment on first section

--- a/app/styles/layout/_sections.scss
+++ b/app/styles/layout/_sections.scss
@@ -12,7 +12,7 @@
 
 	// Push it below the logo.
 	.Root.is-panelLeftVisible & {
-		padding-top: 3.4rem;
+		padding-top: 4rem;
 	}
 }
 .Section {
